# Narrow-Passage-Detection-and-Control-Algorithm-for-Autonomous-Ground-Robots

./: .gitattributes  README.md
grid_map_proc/src/: grid_map_path_planning.cpp  grid_map_transforms.cpp
hector_timer/: CMakeLists.txt  package.xml
hector_timer/include/: hector_timer.hpp
hector_timer/src/: hector_timer.cpp  hector_timer_node.cpp
hector_timer_msgs/: CMakeLists.txt  package.xml
hector_timer_msgs/msg/: HectorTimer.msg  HectorTimerLineInfo.msg  HectorTimerLineType.msg
move_base_lite/move_base_lite_server/: CMakeLists.txt  package.xml
narrow_passage_controller/: CMakeLists.txt  package.xml
narrow_passage_controller/include/: NarrowPassageController.hpp
narrow_passage_controller/src/: NarrowPassageController.cpp  narrow_passage_controller_node.cpp
narrow_passage_detection/: CMakeLists.txt  package.xml
narrow_passage_detection/include/: Narrowpassagedetection.hpp
narrow_passage_detection/src/: Narrowpassagedetection.cpp  narrow_passage_detection_node.cpp
narrow_passage_detection_msgs/: CMakeLists.txt  package.xml
narrow_passage_detection_msgs/msg/: NarrowPassage.msg  NarrowPassageController.msg  NarrowPassageDetection.msg
narrow_passage_path_plan/: CMakeLists.txt  package.xml
narrow_passage_path_plan/src/: Narrow_passage_path_plan.cpp  narrow_passage_path_plan_node.cpp
vehicle_controller/: CMakeLists.txt  package.xml
vehicle_controller/cfg/: ControllerType.cfg  LqrControllerParams.cfg  MPCParams.cfg
vehicle_controller/launch/: asterix_controller.launch
vehicle_controller/src/: controller.cpp  controller_node.cpp  mpc.cpp  (+1 more)
(+26 files in other folders)
